# rover

drive/: drive.py
rover-drive/: README.md  rover-drive.cabal  setupKernel.sh  setupRover.sh  stack.yaml
rover-drive/app/: Main.hs
rover-drive/src/: Drive.hs  I2C.hs  Navigation.hs
rover-gps/: README.md  rover-gps.cabal  stack.yaml
rover-gps/src/: Main.hs
science/: Makefile  README.md  leptsci.c  leptsci.h  range-finder.cabal  rangeFinder.c  stack.yaml
science/src/: Main.hs
