name:                rover-drive
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rover-drive#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable rover-drive
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , rover-drive

Library
  default-language:    Haskell2010
  hs-source-dirs:   src
  Build-Depends:	base
                  , gps
                  , monad-loops
                  , conduit
                  , conduit-extra
                  , mqtt-hs
                  , async
                  , stm
                  , bytestring
                  , cereal
                  , network-multicast
                  , network
  Exposed-modules: Navigation
                   I2C
                   Drive
  extra-lib-dirs: /usr/include/